feat: testes integrados com testcontainers
